--- a/connect_to_care_app/accounts/templates/accounts/administrators/administrator_profile.html
+++ b/connect_to_care_app/accounts/templates/accounts/administrators/administrator_profile.html
@@ -10,8 +10,10 @@
     {% if user.has_credentials %}
     {% if user.administrator.facility_enrolled %}
     <h1>Administrator Profile Page</h1>
+    <h2>You've Successfully Signed Up As An Admin!</h2>
     {% else %}
-    <h1>Facility enrollment needed</h1>
+    <h1>One Last Step</h1>
+    <h2>Please click <a href="{% url 'administrators:facility' %}">here</a> tell us about your facility</h2>
     {% endif %}
     <div>
         <p><a href="{% url 'logout' %}">Log Out</a></p>
