--- a/connect_to_care_app/templates/base.html
+++ b/connect_to_care_app/templates/base.html
@@ -10,11 +10,8 @@
   </head>
   <body>
     <div class="container my-4">
-      
-        Connect To Care
-        {% block content %}
-        {% endblock %}
-           
+        {% block content %}{% endblock %}
+        {% block shift_post_form %}{% endblock %}
     </div>
   </body>
 </html>
